@@ -1,5 +1,7 @@
 01. May 2012 Christoph Thielecke <crissi99@gmx.de>
 	- displaying type in directory tree fixed
+	- sort order on treeview  and directory view now ascending be default
+	- keep ".." entry always as first entry on sort listview
 
 30. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
 	- allow user to resize column width of directory tree again
